--- a/source/partials/_footer.haml
+++ b/source/partials/_footer.haml
@@ -1,5 +1,17 @@
 .row
   .span4.offset1
+
+    %ul.unstyled
+      %li
+        %i.icon-envelope
+        = mail_to "jvan@cse.ucdavis.edu", "email"
+      %li
+        %i.icon-github-alt
+        = link_to "github project", "https://github.com/jvan/vroom"
+      %li
+        %i.icon-bug
+        = link_to "issues", "http://iviz.csc.ucdavis.edu/redmine/projects/vroom"
+
     :markdown
       this site was built using [middleman](http://middlemanapp.com) and
       [bootstrap](http://twitter.github.io/bootstrap/)
