--- a/source/assets/css/site.css.sass
+++ b/source/assets/css/site.css.sass
@@ -5,8 +5,8 @@
 @import "partials/main"
 @import "partials/navbar"
 @import "partials/footer"
-//@import "partials/highlight"
+@import "partials/highlight"
 
 // Third-party 
 @import "vendor/font-awesome.min"
-//@import "vendor/pygments"
+@import "vendor/pygments"
