Added site links to navbar.

--- a/source/partials/_navbar.haml
+++ b/source/partials/_navbar.haml
@@ -3,7 +3,9 @@
     %a.brand{:href => "/"} 
       %i.icon-home
     %ul.nav
-      %li= link_to "one", "#"
-      %li= link_to "two" ,"#"
-      %li= link_to "three", "#"
+      %li= link_to "download", "/download.html"
+      %li= link_to "documentation" ,"/documentation.html"
+      %li= link_to "about", "/about.html"
+      %li= link_to "demos", "/demos.html"
+
 
