--- a/source/assets/css/site.css.sass
+++ b/source/assets/css/site.css.sass
@@ -4,6 +4,7 @@
 // Partials
 @import "partials/main"
 @import "partials/navbar"
+@import "partials/header"
 @import "partials/footer"
 @import "partials/highlight"
 
