--- a/source/assets/css/partials/_header.sass
+++ b/source/assets/css/partials/_header.sass
@@ -1,2 +1,12 @@
 header
   margin-bottom: 40px
+
+  .navbar
+    font-size: 13px
+
+    .brand
+      margin-left: 50px
+      color: #aaa
+
+      &:hover
+        color: #666
