Added layout for documentation pages.

--- a/source/layouts/default.haml
+++ b/source/layouts/default.haml
@@ -3,6 +3,7 @@
     .span12
       .hero-unit
         %h1= data.page.title
+        = yield_content :additional_header
 
   .row-fluid
     .span7.offset2
