Added javascript to markup html generated from markdown files.

--- a/source/layouts/documentation.haml
+++ b/source/layouts/documentation.haml
@@ -5,9 +5,52 @@
       %i.icon-github 
       #{data.page.module}/#{data.page.source}
 
+
 - content_for :post_scripts do
   :javascript
+    // Enable tooltips
     $('[data-toggle="tooltip"]').tooltip();
+
+    // Add markup to overview paragraph
+    $('p:first').addClass('lead')
+
+    // Add markup to table elements
+    $('table').addClass('table table-bordered');
+    $('tr td:first-child').addClass('alert alert-info');
+
+    // Add empty list element for to store tab toggle links
+    $('h3:last').after('<ul class="nav nav-pills nav-stacked" id="nav-tab"/>');
+
+    $('h3:last ~ h4').not('.related').each(function() {
+      var tab_id = $(this).attr("id");
+
+      // add a link to toggle the section content
+      $('#nav-tab').append('<li><a href="#'+tab_id+'" data-toggle="tab">'+$(this).text()+'</a></li>');
+
+      // wrap the section content in a div
+      $(this).nextUntil('h4')
+             .andSelf()
+             .wrapAll('<div class="tab-pane fade media" id="'+tab_id+'" />');
+    });
+
+    // Make the first tab toggle active
+    $('#nav-tab li:first').addClass('active');
+
+    $('.tab-pane').each(function() {
+      // Image elements come wrapped in p-elements; replace with media markup
+      $(this).find('img').unwrap().wrap('<a class="pull-right"/>').addClass('media-object');
+
+      // Wrap code block in media-body div
+      $(this).find('pre').wrap('<div class="media-body"/>');
+
+      // Remove the header element (text already added to list above)
+      $(this).find('h4').remove();
+
+    }).first().addClass('in active'); // activate the first content section
+
+    // Wrap all content sections in div
+    $('.tab-pane').wrapAll('<div class="tab-content"/>');
+
 
 - wrap_layout :default do
   
