Added styling to frontpage hero unit.

--- a/source/assets/css/partials/_header.sass
+++ b/source/assets/css/partials/_header.sass
@@ -1,3 +1,12 @@
 header
   margin-bottom: 40px
 
+#frontpage-hero
+  text-align: center
+  h1
+    font-size: $frontpage-header-font-size
+    text-shadow: 4px 4px #aaa
+  h2
+    margin-bottom: 50px
+    font-size: $frontpage-header-font-size / 2.5
+
