Added markup and styling for documentation directory listings.

--- a/source/assets/css/partials/_main.sass
+++ b/source/assets/css/partials/_main.sass
@@ -15,3 +15,10 @@ footer, .push
 
 .inline
   display: inline
+
+.doclist-outer
+  h3
+    border-bottom: 1px solid #ccc
+
+.doclist-inner
+  padding-left: 15px
