--- a/source/documentation/rendering/sphere.html.md.erb
+++ b/source/documentation/rendering/sphere.html.md.erb
@@ -30,6 +30,8 @@ texture  | [Texture](#) object(s)
 
 #### draw a wireframe sphere
 
+<%= vroom_example_image "cube", "draw-a-wireframe-sphere.png" %>
+
 ~~~ python
 def draw():
    lighting(False)
