Fixed typo in vroom_example_image call.

--- a/source/documentation/utils/random-vertex-generator.html.md.erb
+++ b/source/documentation/utils/random-vertex-generator.html.md.erb
@@ -32,7 +32,7 @@ Generator object for vertices.
 #### random points
 
 
-<%= vroom_example_image "utils", "random-color-generator", "random-points.png" %>
+<%= vroom_example_image "utils", "random-vertex-generator", "random-points.png" %>
 
 
 ~~~ python
@@ -49,7 +49,7 @@ def display():
 #### random cubes
 
 
-<%= vroom_example_image "utils", "random-color-generator", "random-cubes.png" %>
+<%= vroom_example_image "utils", "random-vertex-generator", "random-cubes.png" %>
 
 
 ~~~ python
