Moved tags to hero-unit. Added styling to tag elements.

--- a/source/assets/css/partials/_main.sass
+++ b/source/assets/css/partials/_main.sass
@@ -22,3 +22,11 @@ footer, .push
 
 .doclist-inner
   padding-left: 15px
+
+.taglist
+  a
+    color: #ccc
+    &:hover
+      color: darken(#ccc, 10%)
+  .label-info
+    background: darken(#ccc, 20%)
